--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,6 @@
 .navbar a {
-  color: #0e6f58;
   font-size: medium;
   margin-left: 20px;
-}
-.navbar a.active {
-
-  padding: 2px;
-  border-radius: 2px;
-}
-.navbar a:hover {
-  background-color: #e6ffe6;
-  color: #006400;
+  color: #0e6f58;
+  font-weight: 600;
 }
